@@ -1,6 +1,6 @@
 ## texk/web2c/mplibdir/am/libmplib.am: Makefile fragment for libmplib.
 ##
-## Copyright (C) 2015-2020 Luigi Scarso <tex-live@tug.org>
+## Copyright (C) 2015-2021 Luigi Scarso <tex-live@tug.org>
 ## Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
