@@ -564,7 +564,7 @@ static void mpx_copy_mpto (MPX mpx, FILE *outfile, int textype) {
     if (textype == B_TEX) {
       /* put no |%| at end if it's only 1 line total, starting with |%|;
        * this covers the special case |%&format| in a single line. */
-      if (t != s && *t != '%')
+      if ((t != s || *t != '%') && mpx->mode == mpx_tex_mode)
         fprintf(outfile,"%%");
     }
     free(res);
